--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.5",
+    "react-youtube": "^10.1.0",
     "tailwindcss": "^4.0.6"
   },
   "devDependencies": {
