--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "motion": "^12.4.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.1.5",
     "react-youtube": "^10.1.0",
     "tailwindcss": "^4.0.6"
