--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,11 +8,14 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.6",
     "framer-motion": "^12.4.3",
+    "gh-pages": "^6.3.0",
     "motion": "^12.4.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
