--- a/render.yaml
+++ b/render.yaml
@@ -10,10 +10,11 @@ services:
       - key: PORT
         value: "3000"
 
-  - type: static-site
+  - type: web
     name: health4all-frontend
+    env: static
     buildCommand: cd frontend && npm install && npm run build
-    publishDir: frontend/dist
+    staticPublishPath: ./frontend/dist
     envVars:
       - key: VITE_API_URL
         fromService:
